k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-cpu
spec:
  selector:
    matchLabels:
      app: worker-cpu
  template:
    metadata:
      labels:
        app: worker-cpu
    spec:
      containers:
        - name: worker
          image: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-gpu
spec:
  selector:
    matchLabels:
      app: worker-gpu
  template:
    metadata:
      labels:
        app: worker-gpu
    spec:
      containers:
        - name: worker
          image: worker
          resources:
            limits:
              nvidia.com/gpu: 1
